--- a/html/css/main.css
+++ b/html/css/main.css
@@ -131,7 +131,7 @@ html {
     background-color: transparent;
   }
   html ::-webkit-scrollbar-thumb {
-    background-color: #97462f;
+    background-color: #8C3D29;
     border-radius: none;
   }
   html ::-webkit-scrollbar-corner {
@@ -390,7 +390,7 @@ a:hover, a:focus {
 }
 
 .color-yellow {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .text-right {
@@ -478,7 +478,7 @@ a:hover, a:focus {
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 .swiper-pagination-bullet:hover, .swiper-pagination-bullet:focus {
@@ -513,7 +513,7 @@ a:hover, a:focus {
   padding: 16px 22px 16px 25px;
   cursor: pointer;
       -ms-flex-align: center;
-  background-color: #97462f;
+  background-color: #8C3D29;
   border: none;
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
@@ -570,9 +570,9 @@ a:hover, a:focus {
 }
 
 .btn--outline {
-  color: #97462f;
+  color: #8C3D29;
   background-color: transparent;
-  border-color: #97462f;
+  border-color: #8C3D29;
   -webkit-transition: background-color 0.3s ease, color 0.3s ease;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -724,11 +724,11 @@ a:hover, a:focus {
 }
 
 .arrow-link--theme-yellow .arrow-link__text {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .arrow-link--theme-yellow .arrow-link__icon svg {
-  fill: #97462f;
+  fill: #8C3D29;
 }
 
 .arrow-link__text {
@@ -865,7 +865,7 @@ a:hover, a:focus {
   height: 190px;
       -ms-flex-pack: center;
       -ms-flex-align: center;
-  background-color: #97462f;
+  background-color: #8C3D29;
   border: none;
   border-radius: 50%;
   -webkit-box-pack: center;
@@ -1032,8 +1032,8 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .circle-link:hover, .circle-link:focus {
-    background-color: #97462f;
-    border-color: #97462f;
+    background-color: #8C3D29;
+    border-color: #8C3D29;
   }
 }
 
@@ -1139,13 +1139,13 @@ a:hover, a:focus {
 
 .field--theme-yellow input,
 .field--theme-yellow textarea {
-  color: #97462f;
-  border-bottom-color: #97462f;
+  color: #8C3D29;
+  border-bottom-color: #8C3D29;
 }
 
 .field--theme-yellow input:hover + .field__hint,
 .field--theme-yellow textarea:hover + .field__hint {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .field--theme-yellow .field__hint {
@@ -1153,7 +1153,7 @@ a:hover, a:focus {
 }
 
 .field--theme-yellow.field--filled .field__hint {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .file-upload {
@@ -1163,11 +1163,11 @@ a:hover, a:focus {
 }
 
 .file-upload--theme-yellow .file-upload__text {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .file-upload--theme-yellow .file-upload__icon svg {
-  fill: #97462f;
+  fill: #8C3D29;
 }
 
 .file-upload__label {
@@ -1439,10 +1439,10 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .navigation__dropdown-item--current a {
-    color: #97462f !important;
+    color: #8C3D29 !important;
   }
   .navigation__dropdown-item--current a .navigation__dropdown-icon svg {
-    fill: #97462f !important;
+    fill: #8C3D29 !important;
   }
 }
 
@@ -1473,7 +1473,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .navigation__dropdown-item a:hover, .navigation__dropdown-item a:focus {
-    color: #97462f;
+    color: #8C3D29;
     text-decoration: none;
   }
 }
@@ -1695,7 +1695,7 @@ a:hover, a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #97462f;
+  background-color: #8C3D29;
   opacity: 0;
 }
 
@@ -1822,7 +1822,7 @@ a:hover, a:focus {
     outline: none;
   }
   .social__link:hover svg, .social__link:focus svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -1834,7 +1834,7 @@ a:hover, a:focus {
 .quote {
   position: relative;
   padding: 20px 20px 20px 70px;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 @media (min-width: 992px) {
@@ -2034,8 +2034,8 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .comment .comment-item__reply:hover, .comment .comment-item__reply:focus {
-    background-color: #97462f;
-    border-color: #97462f;
+    background-color: #8C3D29;
+    border-color: #8C3D29;
     outline: none;
   }
 }
@@ -2071,7 +2071,7 @@ a:hover, a:focus {
 /* 2.15 Form */
 .form {
   padding: 40px 25px 55px;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 @media (min-width: 992px) {
@@ -2284,7 +2284,7 @@ a:hover, a:focus {
   }
   .feature-card:hover .feature-card__caption, .feature-card:focus .feature-card__caption {
     color: #000000;
-    background-color: #97462f;
+    background-color: #8C3D29;
   }
 }
 
@@ -2398,7 +2398,7 @@ a:hover, a:focus {
   }
   .service-preview:hover .service-preview__caption, .service-preview:focus .service-preview__caption {
     color: #000000;
-    background-color: #97462f;
+    background-color: #8C3D29;
   }
 }
 
@@ -2549,7 +2549,7 @@ a:hover, a:focus {
   padding: 20px;
       -ms-flex-pack: justify;
       -ms-flex-align: center;
-  background-color: #97462f;
+  background-color: #8C3D29;
   -webkit-box-pack: justify;
   -webkit-box-align: center;
 }
@@ -2864,7 +2864,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .project-card__category:hover, .project-card__category:focus {
-    color: #97462f;
+    color: #8C3D29;
   }
 }
 
@@ -3010,7 +3010,7 @@ a:hover, a:focus {
   padding: 16px;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #97462f;
+  background-color: #8C3D29;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
 }
@@ -3198,7 +3198,7 @@ a:hover, a:focus {
       -ms-flex-direction: column;
           flex-direction: column;
       -ms-flex-pack: justify;
-  background-color: #97462f;
+  background-color: #8C3D29;
   -webkit-transition: -webkit-transform 0.3s ease;
   transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
@@ -3473,7 +3473,7 @@ a:hover, a:focus {
 }
 
 .card-price__list li.yellow::before {
-  background-color: #97462f;
+  background-color: #8C3D29;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cline x1='8.06791' y1='12.5683' x2='11.9251' y2='16.4255' stroke-width='2' stroke='%23000000'/%3e%3cline x1='20.9248' y1='8.06791' x2='11.9248' y2='17.0679' stroke-width='2' stroke='%23000000'/%3e%3c/svg%3e ");
 }
 
@@ -3503,7 +3503,7 @@ a:hover, a:focus {
 }
 
 .card-price--yellow .card-price__wrapper {
-  background-color: #97462f;
+  background-color: #8C3D29;
   border: 0;
 }
 
@@ -3525,19 +3525,19 @@ a:hover, a:focus {
 }
 
 .skill--theme-yellow::before {
-  border-bottom-color: #97462f;
+  border-bottom-color: #8C3D29;
 }
 
 .skill--theme-yellow .skill__title {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .skill--theme-yellow .skill__percent {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .skill--theme-yellow .skill__progress {
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 .skill__header {
@@ -4189,7 +4189,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .mobile-canvas__phone:hover, .mobile-canvas__phone:focus {
-    color: #97462f;
+    color: #8C3D29;
     outline: none;
   }
 }
@@ -4240,7 +4240,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .mobile-canvas__close:hover::before, .mobile-canvas__close:hover::after, .mobile-canvas__close:focus::before, .mobile-canvas__close:focus::after {
-    border-top-color: #97462f;
+    border-top-color: #8C3D29;
   }
 }
 
@@ -4571,7 +4571,7 @@ a:hover, a:focus {
 
 .main-screen__title span {
   display: block;
-  color: #97462f;
+  color: #8C3D29;
 }
 
 @media (min-width: 576px) {
@@ -4627,7 +4627,7 @@ a:hover, a:focus {
   height: 100vh;
   min-height: 480px;
   padding: 120px 0 45px;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 @media (min-width: 992px) {
@@ -6188,7 +6188,7 @@ a:hover, a:focus {
 
 .discuss-project__wrapper {
   padding: 40px 32px;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 @media (min-width: 768px) {
@@ -6366,7 +6366,7 @@ a:hover, a:focus {
 .tooltip__card {
   display: none;
   pointer-events: none;
-  background-color: #97462f;
+  background-color: #8C3D29;
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
   z-index: 1001;
@@ -6619,7 +6619,7 @@ a:hover, a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 1px solid #97462f;
+  border: 1px solid #8C3D29;
 }
 
 .start-project__send:focus {
@@ -6741,7 +6741,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .projects-listing__category:hover, .projects-listing__category:focus {
-    color: #97462f;
+    color: #8C3D29;
   }
 }
 
@@ -7046,13 +7046,13 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .services-section__link:hover, .services-section__link:focus {
-    color: #97462f;
+    color: #8C3D29;
   }
   .services-section__link:hover span, .services-section__link:focus span {
     opacity: 1;
   }
   .services-section__link:hover span svg, .services-section__link:focus span svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -7860,7 +7860,7 @@ a:hover, a:focus {
   font-size: 42px;
   font-weight: 500;
   line-height: 0.95;
-  color: #97462f;
+  color: #8C3D29;
 }
 
 @media (min-width: 320px) {
@@ -7893,7 +7893,7 @@ a:hover, a:focus {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.38462;
-  color: #97462f;
+  color: #8C3D29;
 }
 
 @media (min-width: 320px) {
@@ -7936,9 +7936,9 @@ a:hover, a:focus {
   margin-bottom: -1px;
   font-size: 15px;
   line-height: 1.36364;
-  color: #97462f;
-  border-top: solid 1px #97462f;
-  border-bottom: solid 1px #97462f;
+  color: #8C3D29;
+  border-top: solid 1px #8C3D29;
+  border-bottom: solid 1px #8C3D29;
 }
 
 .vcard__great br {
@@ -7979,7 +7979,7 @@ a:hover, a:focus {
 }
 
 .vcard__start-project .start-project__title {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .vcard table {
@@ -7991,10 +7991,10 @@ a:hover, a:focus {
   padding: 20px 0;
   font-size: 15px;
   line-height: 1.36364;
-  color: #97462f;
+  color: #8C3D29;
   vertical-align: top;
-  border-top: solid 1px #97462f;
-  border-bottom: solid 1px #97462f;
+  border-top: solid 1px #8C3D29;
+  border-bottom: solid 1px #8C3D29;
 }
 
 .vcard table td:first-child {
@@ -8028,7 +8028,7 @@ a:hover, a:focus {
 }
 
 .vcard table td a {
-  color: #97462f;
+  color: #8C3D29;
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
@@ -8311,7 +8311,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .single-post__share-icon:hover svg, .single-post__share-icon:focus svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -8379,7 +8379,7 @@ a:hover, a:focus {
   margin: 0 0 12px;
   font-size: 40px;
   line-height: 40px;
-  color: #97462f;
+  color: #8C3D29;
   text-transform: uppercase;
 }
 
@@ -8585,7 +8585,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .coming-soon__social .social__link:hover svg, .coming-soon__social .social__link:focus svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -8792,7 +8792,7 @@ a:hover, a:focus {
   display: block;
   width: 100%;
   height: 0;
-  background-color: #97462f;
+  background-color: #8C3D29;
   -webkit-transition: height 0.3s ease;
   transition: height 0.3s ease;
 }
@@ -8815,7 +8815,7 @@ a:hover, a:focus {
 }
 
 .contact .contact-section__form-wrapper {
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 /* 4.17 FAQ page*/
@@ -9081,7 +9081,7 @@ a:hover, a:focus {
 }
 
 .about-us__banner .first-banner__title span {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .about-us__stat {
@@ -9523,10 +9523,10 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .single-project__next a:hover, .single-project__next a:focus {
-    color: #97462f;
+    color: #8C3D29;
   }
   .single-project__next a:hover svg, .single-project__next a:focus svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -9603,7 +9603,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .header--white .social__link:hover svg, .header--white .social__link:focus svg {
-    fill: #97462f;
+    fill: #8C3D29;
   }
 }
 
@@ -9744,11 +9744,11 @@ a:hover, a:focus {
 }
 
 .header--leftward .navigation__dropdown-item a:hover, .header--leftward .navigation__dropdown-item a:focus {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .header--leftward .navigation__dropdown-item a:hover .header__dropdown-icon svg, .header--leftward .navigation__dropdown-item a:focus .header__dropdown-icon svg {
-  fill: #97462f !important;
+  fill: #8C3D29 !important;
 }
 
 @media (min-width: 992px) {
@@ -9988,7 +9988,7 @@ a:hover, a:focus {
 }
 
 .header--yellow .logo svg {
-  fill: #97462f;
+  fill: #8C3D29;
 }
 
 .header--yellow .menu-toggle {
@@ -10001,7 +10001,7 @@ a:hover, a:focus {
 }
 
 .header--yellow .menu-toggle::before, .header--yellow .menu-toggle::after, .header--yellow .menu-toggle__line {
-  border-top-color: #97462f;
+  border-top-color: #8C3D29;
 }
 
 .header--yellow .menu-toggle:focus {
@@ -10017,11 +10017,11 @@ a:hover, a:focus {
 }
 
 .header--yellow .navigation__item--current .navigation__link-icon svg {
-  fill: #97462f;
+  fill: #8C3D29;
 }
 
 .header--yellow .navigation__link {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .header--yellow .navigation__link:focus {
@@ -10038,7 +10038,7 @@ a:hover, a:focus {
 }
 
 .header--yellow .navigation__dropdown-item--current a {
-  color: #97462f !important;
+  color: #8C3D29 !important;
 }
 
 .header--yellow .navigation__dropdown-item--current a::before {
@@ -10046,15 +10046,15 @@ a:hover, a:focus {
 }
 
 .header--yellow .navigation__dropdown-item--current a .navigation__dropdown-icon svg {
-  fill: #97462f !important;
+  fill: #8C3D29 !important;
 }
 
 .header--yellow .navigation__dropdown-item a {
-  color: #97462f;
+  color: #8C3D29;
 }
 
 .header--yellow .navigation__dropdown-item a::before {
-  border-top-color: #97462f;
+  border-top-color: #8C3D29;
 }
 
 .header--yellow .navigation__dropdown-item a:hover, .header--yellow .navigation__dropdown-item a:focus {
@@ -10066,7 +10066,7 @@ a:hover, a:focus {
 }
 
 .header--yellow .header__panel > .social .social__link svg {
-  fill: #97462f;
+  fill: #8C3D29;
 }
 
 .header--yellow .header__panel > .social .social__link:focus svg {
@@ -10130,7 +10130,7 @@ a:hover, a:focus {
 
 @media (min-width: 992px) {
   .header--fixed .mobile-canvas__phone:hover, .header--fixed .mobile-canvas__phone:focus {
-    color: #97462f;
+    color: #8C3D29;
   }
 }
 
@@ -10232,7 +10232,7 @@ a:hover, a:focus {
 /* 5.2 Footer */
 .footer {
   padding: 40px 0;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 @media (min-width: 992px) {
@@ -10669,7 +10669,7 @@ a:hover, a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #97462f;
+  background-color: #8C3D29;
   border-radius: 50%;
   opacity: 0.6;
   -webkit-animation: bounce 2s infinite ease-in-out;
@@ -10780,7 +10780,7 @@ a:hover, a:focus {
 
 .header-column {
   padding-bottom: 14px;
-  background-color: #97462f;
+  background-color: #8C3D29;
 }
 
 .header-column__menu {
