--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title | default: site.title }}</title>
   {% seo %}
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 </head>
 <body>
   {% include header.html %}
@@ -13,5 +13,6 @@
     {{ content }}
   </main>
   {% include footer.html %}
+  <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 </body>
 </html>
