--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,36 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title | default: site.title }}</title>
   {% seo %}
-  <link rel="stylesheet" href="{{ '/assets/css/animistion.min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/aos.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/bootstrap-grid.min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/fullpage.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/intro-page.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/jquery.fancybox.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/jquery.pagepiling.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/jquery.pagepiling.min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/swiper-bundle.css' | relative_url }}">
-  <link rel="shortcut icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
-  <svg style="display:none;">
-    <defs>
-      {% for symbol in site.data.symbols %}
-        {{ symbol.content | safe }}
-      {% endfor %}
-    </defs>
-  </svg>
 </head>
 <body>
+  {% include styles.html %}
   {% include header.html %}
   <main>
     {{ content }}
   </main>
   {% include footer.html %}
-  <script src="{{ '/assets/js/libs/jquery-3.6.0.min.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/libs/jquery.fancybox.min.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/libs/jquery.fullpage.min.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/libs/jquery.pagepiling.min.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/libs/swiper-bundle.min.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+  {% include scripts.html %}
 </body>
 </html>
