--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <div class="social-icons">
     <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#linkedin"></use></svg></a>
     <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#facebook"></use></svg></a>
