--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
+
 <head>
+
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title | default: site.title }}</title>
-  {% seo %}
-</head>
-<body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="msapplication-TileColor" content="#da532c">
+  {% include favicon.html %}
   {% include styles.html %}
+
+  <title>{{ page.title | default: site.title }}</title>
+
+  {% seo %}
+
+</head>
+
+<body>
   {% include header.html %}
+  
   <main>
     {{ content }}
   </main>
+
   {% include footer.html %}
+
   {% include scripts.html %}
+
 </body>
+
 </html>
