--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,70 @@
-<header class="header">
-  <div class="social-icons">
-    <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#linkedin"></use></svg></a>
-    <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#facebook"></use></svg></a>
-    <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#instagram"></use></svg></a>
-    <a href="#"><svg class="symbol" width="24" height="24"><use xlink:href="#twitter"></use></svg></a>
-  </div>
-  <nav class="main-nav">
-    <div class="menu-toggle">Menu toggle</div>
-    <div class="logo">
-      <a href="{{ '/' | relative_url }}" class="logo-text">
-        AMERICAN<br>COFFEE<br>TABLE<br>BOOK
-      </a>
-      <svg class="symbol" width="50" height="50"><use xlink:href="#logo"></use></svg>
-    </div>
-    {% include menu.html %}
-  </nav>
-</header>
+  <div class="animsition">
+    <header class="header header--separator __js_fixed-header">
+      <div class="header__container container container--size-large">
+        <a class="header__logo logo" href="agency-default.html">
+          <svg width="152" height="38">
+            <use xlink:href="#logo"></use>
+          </svg>
+        </a>
+        <div class="header__mobile mobile-canvas">
+          <nav class="mobile-canvas__nav navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__link animsition-link" href="agency-default.html">Home<span class="navigation__link-icon">
+                    <svg width="12" height="13">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              <li class="navigation__item">
+                <a class="navigation__link animsition-link" href="contact.html">Contact<span class="navigation__link-icon">
+                    <svg width="12" height="13">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- Social-->
+          <ul class="header__social social">
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank">
+                <svg width="20" height="20" aria-label="linkedin icon">
+                  <use xlink:href="#linkedin"></use>
+                </svg>
+                <span class="visually-hidden">linkedin</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank">
+                <svg width="20" height="20" aria-label="facebook icon">
+                  <use xlink:href="#facebook"></use>
+                </svg>
+                <span class="visually-hidden">facebook</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank">
+                <svg width="20" height="20" aria-label="instagram icon">
+                  <use xlink:href="#instagram"></use>
+                </svg>
+                <span class="visually-hidden">instagram</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank">
+                <svg width="20" height="20" aria-label="twitter icon">
+                  <use xlink:href="#twitter"></use>
+                </svg>
+                <span class="visually-hidden">twitter</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <button class="header__menu-toggle menu-toggle" type="button">
+          <span class="menu-toggle__line"></span>
+          <span class="visually-hidden">Menu toggle</span>
+        </button>
+      </div>
+    </header>
