--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<div class="animsition">
   {% include header.html %}
   
   <main>
@@ -23,7 +24,7 @@
   </main>
 
   {% include footer.html %}
-
+</div>
   {% include scripts.html %}
 
 </body>
