--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-  <div class="animsition">
-    <header class="header header--separator __js_fixed-header">
+     <header class="header header--separator __js_fixed-header">
       <div class="header__container container container--size-large">
         <a class="header__logo logo" href="agency-default.html">
           <svg width="152" height="38">
@@ -7,25 +6,7 @@
           </svg>
         </a>
         <div class="header__mobile mobile-canvas">
-          <nav class="mobile-canvas__nav navigation">
-            <ul class="navigation__list">
-              <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="agency-default.html">Home<span class="navigation__link-icon">
-                    <svg width="12" height="13">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
-              <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="contact.html">Contact<span class="navigation__link-icon">
-                    <svg width="12" height="13">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+          {% include menu.html %}
           <!-- Social-->
           <ul class="header__social social">
             <li class="social__item">
