--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,21 +1,19 @@
-<ul class="nav-menu">
-  <li class="nav-item">
-    <a href="{{ '/' | relative_url }}" class="nav-link">HOME</a>
-  </li>
-  <li class="nav-item">
-    <a href="{{ '/products/' | relative_url }}" class="nav-link">PRODUCTS</a>
-    <ul class="submenu">
-      <li><a href="{{ '/products/american/' | relative_url }}" class="subnav-link">AMERICAN</a></li>
-      <li><a href="{{ '/products/bitcoin/' | relative_url }}" class="subnav-link">BITCOIN</a></li>
-    </ul>
-  </li>
-  <li class="nav-item">
-    <a href="{{ '/about/' | relative_url }}" class="nav-link">ABOUT</a>
-  </li>
-  <li class="nav-item">
-    <a href="{{ '/blog/' | relative_url }}" class="nav-link">BLOG</a>
-  </li>
-  <li class="nav-item">
-    <a href="{{ '/contact/' | relative_url }}" class="nav-link">CONTACT</a>
-  </li>
-</ul>
+          <nav class="mobile-canvas__nav navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__link animsition-link" href="agency-default.html">Home<span class="navigation__link-icon">
+                    <svg width="12" height="13">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              <li class="navigation__item">
+                <a class="navigation__link animsition-link" href="contact.html">Contact<span class="navigation__link-icon">
+                    <svg width="12" height="13">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </nav>
