--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,29 +1,30 @@
-          <nav class="mobile-canvas__nav navigation">
-            <ul class="navigation__list">
-              {% for item in site.data.menu.items %}
-              <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="{{ item.url }}" title="{{ item.title }}">{{ item.name }}<span class="navigation__link-icon">
-                    <svg width="12" height="13">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
-                {% if item.subitems %}
-                <div class="navigation__dropdown">
-                  <ul class="navigation__dropdown-list">
-                    <li class="navigation__dropdown-item">
-                      <a class="animsition-link" href="{{ subitem.url }} title="{{ subitem.title }}"">{{ subitem.name }}<span class="navigation__dropdown-icon">
-                          <svg width="12" height="13">
-                            <use xlink:href="#link-arrow"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                  {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>
-              </li>
-              {% endfor %}
-              </ul>
-              </nav>
+<nav class="mobile-canvas__nav navigation">
+  <ul class="navigation__list">
+    {% for item in site.data.menu.items %}
+    <li class="navigation__item">
+      <a class="navigation__link animsition-link" href="{{ item.url }}" title="{{ item.title }}">{{ item.name }}<span class="navigation__link-icon">
+          <svg width="12" height="13">
+            <use xlink:href="#link-arrow"></use>
+          </svg>
+        </span>
+      </a>
+      {% if item.subitems %}
+      <div class="navigation__dropdown">
+        <ul class="navigation__dropdown-list">
+          {% for subitem in item.subitems %}
+          <li class="navigation__dropdown-item">
+            <a class="animsition-link" href="{{ subitem.url }}" title="{{ subitem.title }}">{{ subitem.name }}<span class="navigation__dropdown-icon">
+                <svg width="12" height="13">
+                  <use xlink:href="#link-arrow"></use>
+                </svg>
+              </span>
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ul>
+</nav>
