--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,25 +10,15 @@
             <a href="tel:+34255216021">+3(425) 521 60 21</a>
           </div>
           <div class="footer__menu">
-            <div class="footer__title">Quick Links</div>
-            <ul class="footer__menu-list">
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="agency-default.html">Home</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="about-us.html">Pages</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="blog-masonry.html">Blog</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="contact.html">Contact</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="projects-masonry.html">Portfolio</a>
-              </li>
-            </ul>
-          </div>
+  <div class="footer__title">Quick Links</div>
+  <ul class="footer__menu-list">
+    {% for item in site.data.menu.items %}
+    <li class="footer__menu-item">
+      <a class="footer__menu-link" href="{{ item.url }}">{{ item.name }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
           <div class="footer__menu">
             <div class="footer__title">Follow</div>
             <ul class="footer__menu-list">
