--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,41 +7,18 @@
         </a>
         <div class="header__mobile mobile-canvas">
           {% include menu.html %}
-          <!-- Social-->
-          <ul class="header__social social">
-            <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
-                <svg width="20" height="20" aria-label="linkedin icon">
-                  <use xlink:href="#linkedin"></use>
-                </svg>
-                <span class="visually-hidden">linkedin</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
-                <svg width="20" height="20" aria-label="facebook icon">
-                  <use xlink:href="#facebook"></use>
-                </svg>
-                <span class="visually-hidden">facebook</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
-                <svg width="20" height="20" aria-label="instagram icon">
-                  <use xlink:href="#instagram"></use>
-                </svg>
-                <span class="visually-hidden">instagram</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
-                <svg width="20" height="20" aria-label="twitter icon">
-                  <use xlink:href="#twitter"></use>
-                </svg>
-                <span class="visually-hidden">twitter</span>
-              </a>
-            </li>
-          </ul>
+<ul class="header__social social">
+  {% for social in site.data.social.items %}
+  <li class="social__item">
+    <a class="social__link" href="{{ social.url }}" target="_blank">
+      <svg width="20" height="20" aria-label="{{ social.name }} icon">
+        <use xlink:href="#{{ social.icon }}"></use>
+      </svg>
+      <span class="visually-hidden">{{ social.name }}</span>
+    </a>
+  </li>
+  {% endfor %}
+</ul>
         </div>
         <button class="header__menu-toggle menu-toggle" type="button">
           <span class="menu-toggle__line"></span>
