--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             </svg>
           </a>
           <div class="footer__phone">
-            <a href="tel:+34255216021">+3(425) 521 60 21</a>
+            <a href="#">UTTERLY UNIQUE</a>
           </div>
           <div class="footer__menu">
   <div class="footer__title">Quick Links</div>
@@ -45,7 +45,7 @@
             <div class="footer__feedback-notice">This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© Centrix 2021. All Rights Resevered</div>
+            <div class="footer__copyright">© TABLE books pro 2025. All Rights Resevered</div>
             <a class="footer__privacy" href="#">Privacy Policy</a>
           </div>
         </div>
