--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,17 +31,18 @@
           </div>
           <div class="footer__feedback">
             <div class="footer__title">Sign up to our newsletter</div>
-<form class="footer__feedback-form" action="https://tablebookspro.substack.com/subscribe" method="post" id="substack-subscribe">
-  <label class="footer__feedback-field field">
-    <input type="email" name="email" required style="padding: 8px; border: 1px solid #ccc; border-radius: 4px; width: 100%;">
-    <span class="field__hint">E-mail</span>
-  </label>
-  <button class="footer__feedback-send arrow-btn arrow-btn--size-large" type="submit">
-    <svg width="75" height="75">
-      <use xlink:href="#link-arrow"></use>
-    </svg>
-  </button>
-</form>
+            <form class="footer__feedback-form" action="#" method="post">
+              <label class="footer__feedback-field field">
+                <input type="email" name="email">
+                <span class="field__hint">E-mail</span>
+              </label>
+              <button class="footer__feedback-send arrow-btn arrow-btn--size-large" type="button">
+                <svg width="75" height="75">
+                  <use xlink:href="#link-arrow"></use>
+                </svg>
+              </button>
+            </form>
+            <iframe src="https://tablebookspro.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
             <div class="footer__feedback-notice">This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.</div>
           </div>
           <div class="footer__bottom">
