--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
   <ul class="footer__menu-list">
     {% for item in site.data.menu.items %}
     <li class="footer__menu-item">
-      <a class="footer__menu-link" href="{{ item.url }}">{{ item.name }}</a>
+      <a class="footer__menu-link" href="{{ item.url | relative_url }}">{{ item.name }}</a>
     </li>
     {% endfor %}
   </ul>
