--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
     <footer class="footer __js_fixed-footer">
       <div class="footer__container container container--size-large">
         <div class="footer__grid">
-          <a class="footer__logo" href="agency-default.html">
+          <a class="footer__logo" href="/">
             <svg width="59" height="242">
-              <use xlink:href="#vertical-logo"></use>
+              <use xlink:href="#logo"></use>
             </svg>
           </a>
           <div class="footer__phone">
