--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
      <header class="header header--separator __js_fixed-header">
       <div class="header__container container container--size-large">
-        <a class="header__logo logo" href="agency-default.html">
+        <a class="header__logo logo" href="/">
           <svg width="119" height="19">
             <use xlink:href="#logo"></use>
           </svg>
