--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
       <div class="footer__container container container--size-large">
         <div class="footer__grid">
           <a class="footer__logo" href="/">
-            <svg width="59" height="242">
+            <svg width="242" height="59">
               <use xlink:href="#logo"></use>
             </svg>
           </a>
-          <div class="footer__phone">
+          <!--<div class="footer__phone">
             <a href="#">UTTERLY UNIQUE</a>
-          </div>
+          </div>-->
           <div class="footer__menu">
   <div class="footer__title">Quick Links</div>
   <ul class="footer__menu-list">
