--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
     <footer class="footer __js_fixed-footer">
       <div class="footer__container container container--size-large">
         <div class="footer__grid">
-          <a class="footer__logo" href="/">
+          <!--<a class="footer__logo" href="/">
             <svg width="242" height="59">
               <use xlink:href="#logo"></use>
             </svg>
           </a>
-          <!--<div class="footer__phone">
+          <div class="footer__phone">
             <a href="#">UTTERLY UNIQUE</a>
           </div>-->
           <div class="footer__menu">
