--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
             <svg width="242" height="59">
               <use xlink:href="#logo"></use>
             </svg>
-          </a>
+          </a>-->
           <div class="footer__phone">
-            <a href="#">UTTERLY UNIQUE</a>
-          </div>-->
+            <!--<a href="#">UTTERLY UNIQUE</a>-->
+          </div>
           <div class="footer__menu">
   <div class="footer__title">Quick Links</div>
   <ul class="footer__menu-list">
