--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
     <footer class="footer __js_fixed-footer">
       <div class="footer__container container container--size-large">
         <div class="footer__grid">
-          <!--<a class="footer__logo" href="/">
-            <svg width="242" height="59">
+          <a class="footer__logo" href="/">
+            <!--<svg width="242" height="59">
               <use xlink:href="#logo"></use>
-            </svg>
-          </a>-->
+            </svg>-->
+          </a>
           <div class="footer__phone">
-            <!--<a href="#">UTTERLY UNIQUE</a>-->
+            <a href="#"></a>
           </div>
           <div class="footer__menu">
   <div class="footer__title">Quick Links</div>
