--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,22 +30,12 @@
 </ul>
           </div>
           <div class="footer__feedback">
-            <div class="footer__title">Sign up to our newsletter</div>
-            <form class="footer__feedback-form" action="#" method="post">
-              <label class="footer__feedback-field field">
-                <input type="email" name="email">
-                <span class="field__hint">E-mail</span>
-              </label>
-              <button class="footer__feedback-send arrow-btn arrow-btn--size-large" type="button">
-                <svg width="75" height="75">
-                  <use xlink:href="#link-arrow"></use>
-                </svg>
-              </button>
-            </form>
+            <div class="footer__title">This site uses affiliate links. For more information, see my disclosure <a href="#">here</a></div>
+
             <div class="footer__feedback-notice">This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© TABLE books pro 2025. All Rights Resevered</div>
+            <div class="footer__copyright">© IWM LLC 2025. All Rights Resevered. A TABLE books pro™ trademark.</div>
             <a class="footer__privacy" href="#">Privacy Policy</a>
           </div>
         </div>
