--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
             <div class="footer__feedback-notice">For more information, see my <a href="#" target="_blank">Affiliate Disclosure</a> and view our <a href="#" target="_blank">Terms of Service</a>.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© IWM LLC 2025. All Rights Resevered.<br>A TABLE books pro™ trademark.</div>
+            <div class="footer__copyright">© IWM LLC 2025. All Rights Resevered.<br>TABLE books pro™</div>
             <a class="footer__privacy" href="#">Privacy Policy</a>
           </div>
         </div>
